syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/Murat993/auth/pkg/user_v1;user_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "User API"
    version: "1.0.0"
    contact: {
      name: "Murat N"
      email: "murat@nyssambayev.dev"
    };
  };

  host: "localhost:8080",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service UserV1 {
  // Создание пользователя
  rpc Create(CreateRequest) returns (CreateResponse){
    option (google.api.http) =  {
      post: "/user/v1/create"
      body: "*"
    };
  };
  // Получение пользователя
  rpc Get(GetRequest) returns (GetResponse){
    option (google.api.http) =  {
      get: "/user/v1"
    };
  };
  // Обновление пользователя
  rpc Update(UpdateRequest) returns (google.protobuf.Empty){
    option (google.api.http) =  {
      patch: "/user/v1"
      body: "*"
    };
  };
  // Удаление пользователя
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
    option (google.api.http) =  {
      delete: "/user/v1"
    };
  };
}

enum Role {
  USER = 0;
  BOOK = 1;
}

message User {
  int64 id = 1;
  string name = 2 [(validate.rules).string = {min_len: 1, max_len: 50}];
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UserCreate {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  Role role = 5;
}

message UserUpdate {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue email = 2;
}

message CreateRequest {
    UserCreate useCreate = 1;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  User user = 1;
}

message UpdateRequest {
  int64 id = 1;
  UserUpdate userUpdate = 2;
}

message DeleteRequest {
  int64 id = 1;
}

